infrastructure/configs/base/authentik/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.kubernetes.io/managed: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
spec:
  ingressClassName: nginx
  rules:
    - host: "authentik.dimarco-server.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 9000
  tls:
    - hosts:
        - "authentik.dimarco-server.site"
      secretName: authentik-tls
